Disable start ipt button on tb screening form

--- a/omod/src/main/webapp/resources/htmlforms/tb/tbScreening.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbScreening.html
@@ -811,8 +811,8 @@
 			<div id="ipt-initiation" style="width: 100%; float: left; overflow: auto; text-align: left; padding: 5px"><span class="ke-flagtag">Candidate for IPT Initiation</span>
 				<table>
 					<tr>
-						<td><button type="button" style="background-color:steelblue;font-size:16pt;font-weight:600;padding: 4px 10px;color:white;height: 50px" id="enrollInIptProgram">Start IPT</button></td>
-						<td><label style="background-color: #E9E4CC;font-size: 16pt;font-weight: 600;" id="lblIptEnrollmentStatus"></label></td>
+						<!--<td><button type="button" style="background-color:steelblue;font-size:16pt;font-weight:600;padding: 4px 10px;color:white;height: 50px" id="enrollInIptProgram">Start IPT</button></td>
+						<td><label style="background-color: #E9E4CC;font-size: 16pt;font-weight: 600;" id="lblIptEnrollmentStatus"></label></td>-->
 					</tr>
 				</table>
 			</div>
