--- a/omod/src/main/webapp/resources/htmlforms/hts/htsLinkage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsLinkage.html
@@ -20,7 +20,8 @@
 
             //Default location
             jq('#default-location').click(defaultLocationChange);//Default location
-            jq("#hiv-id input[type=text]").blur(checkForExistingPatientIdentifiers);
+            jq('#upnError').hide();
+            jq("#upn-concept input[type=text]").blur(validatePatientIdentifiers);
 
         });
         //Checkbox to prepopulate default location
@@ -35,31 +36,43 @@
             }
         };
 
-        function checkForExistingPatientIdentifiers() {
-            var upnEntered = jq('#hiv-id input[type=text]').val();
-            jq.getJSON('/' + ctxPath + '/kenyaemr/emrUtils/identifierExists.action', { upn: upnEntered }, function(data) {
-                jq('#upnError').hide();
-                if (data.upnExists === true) {
+        function validatePatientIdentifiers() {
+            var upnEntered = jq('#upn-concept input[type=text]').val();
+            if(upnEntered == "") {
+                jq('#upnError').text("");
+                jq('#upnError').text("CCC Number should not be empty!");
+                jq('#upnError').show();
+                jq('#hiv-id input[type=text]').val("");
+                getField('upn-concept.value').val("");
+            }else if (!isNaN(upnEntered)) {
+                if ((/^[0-9]{10}$/.test(upnEntered) === false) &amp;&amp; (/^[0-9]{11}$/.test(upnEntered) === false)) {
 
-                    jq('#upnError').text("A patient with similar CCC already exists. Please correct before proceeding");
+                    jq('#upnError').text("");
+                    jq('#upnError').text("Invalid CCC Number Format! Should be mfl-clinic number, each 5 digits");
                     jq('#upnError').show();
-                    jq('#hiv-id input[type=text]').focus();
-                }
+                    jq('#hiv-id input[type=text]').val("");
+                } else {
+                    jq.getJSON('/' + ctxPath + '/kenyaemr/emrUtils/identifierExists.action', {upn: upnEntered}, function (data) {
 
-               if(upnEntered != null &amp;&amp; upnEntered != "") {
-                   if ((/^[0-9]{10}$/.test(upnEntered) === false) &amp;&amp; (/^[0-9]{11}$/.test(upnEntered) === false)) {
-                       jq('#upnError').text("Invalid CCC Number Format! Should be mfl-clinic number, each 5 digits (accepts 11 digits for existing CCC");
-                       jq('#upnError').show();
-                       getField('upn-concept.value').val(upnEntered);
-                   } else {
-                       getField('upn-concept.value').val(upnEntered);
-                   }
-               }
-            });
+                        if (data.upnExists === true) {
+                            jq('#upnError').text("");
+                            jq('#upnError').text("A patient with similar CCC already exists. Please correct before proceeding");
+                            jq('#upnError').show();
+                            jq('#hiv-id input[type=text]').focus();
+                        } else {
+                            jq('#upnError').text("");
+                            jq('#hiv-id input[type=text]').val(upnEntered);
+                        }
+                    });
+                }
+            } else {
+                jq('#hiv-id input[type=text]').val("");
+                getField('upn-concept.value').val("");
+            }
         }
         //Before Submit
         beforeSubmit.push(function() {
-            return true;
+                return true;
         });
         //Clear hidden sections
         clearHiddenSections = function(parentObj) {
@@ -103,9 +116,10 @@
                     </td><td>  <input type="checkbox" name="default-facility" id="default-location" /> This facility</td>
                     <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; CCC number:
                     <td>
-                    <span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="true"/></span>
-                    <span id="upnError" class="error"></span>
-                    <div style="display:none"> <obs class="upn" conceptId="162053" id="upn-concept" /></div>
+                    <div style="display:none"> <span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="false"/></span> </div>
+
+                    <div> <obs class="upn" conceptId="162053" id="upn-concept" size ="20" required="true"/></div>
+                        <span id="upnError" class="error"></span>
                 </td>
                     </td>
                 </tr>
