fixed typo on adherence form

--- a/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/enhancedAdherenceScreening.html
@@ -329,7 +329,7 @@
                     Barriers to adherence
                 </legend>
                 <table class="simple-table" id="adherence-barriers-screening-questions">
-                    <tr><td><strong>Access for possible barriers to adherence </strong><br /><br /> </td></tr>
+                    <tr><td><strong>Assess for possible barriers to adherence </strong><br /><br /> </td></tr>
 
                     <tr><td><strong> Cognitive Barriers </strong></td></tr>
                     <tr>
